# strumok

./: .gitignore  README.md
strumok/: CMakeLists.txt  gd_attack.cpp  generate_relations.cpp  main.cpp  strumok_relations.txt
strumok/strumok/: strumok.cpp  strumok.h
strumok/strumok/strumok_tables/: strumok_tables.cpp  strumok_tables.h
